--- a/package.json
+++ b/package.json
@@ -2,7 +2,18 @@
   "name": "chat-app",
   "private": true,
   "version": "0.0.0",
+  "description": "this simple react app to access llama3 module by ollama rest api.",
+  "main": "index.js",
+  "keywords": [
+    "llama3",
+    "reactJs",
+    "personal",
+    "chat",
+    "app"
+  ],
   "type": "module",
+  "author": "bobby singh <bobbysingh2005@gmail.com>",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,7 +24,9 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
