--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "1.0.1",
   "description": "this simple react app to access llama3 module by ollama rest api.",
-  "main": "dist/index.js",
   "keywords": [
     "llama3",
     "reactJs",
@@ -15,7 +14,7 @@
   "author": "bobby singh <bobbysingh2005@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node .",
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
