--- a/package.json
+++ b/package.json
@@ -21,10 +21,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "latest",
     "bootstrap": "latest",
+    "font-awesome": "^4.7.0",
     "react": "latest",
     "react-dom": "latest",
+    "react-fontawesome": "^1.7.1",
     "react-markdown": "latest",
     "remark-gfm": "latest"
   },
