--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "latest",
     "bootstrap": "latest",
+    "dayjs": "^1.11.11",
     "font-awesome": "^4.7.0",
     "react": "latest",
     "react-dom": "latest",
