set docker rocm image configuration for amd ryzen 5 5500 for best performance.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,12 +34,12 @@ services:
       - OLLAMA_HOST=0.0.0.0:11434
       - GPU=all       # Set GPU mode (e.g., ryzen, nvidia)
       # - DEVICE_DRIVER=nvidia     # Specify the device driver to use (e.g., nvidia)
-      - DEVICE_DRIVER=ryzen     # Specify the device driver to use (e.g., ryzen)
+      # - DEVICE_DRIVER=ryzen     # Specify the device driver to use (e.g., ryzen)
     
       # Set compiler flags for the container
-      - OLLAMA_CPPFLAGS=-DCUDA_ARCH_BIN=70 -DCUDA_ARCH_PTX=70 -DHLSL_TARGET=sm70
+      # - OLLAMA_CPPFLAGS=-DCUDA_ARCH_BIN=70 -DCUDA_ARCH_PTX=70 -DHLSL_TARGET=sm70
           # Link against the rocm_device library
-      - OLLAMA_LDFLAGS=-lrocm_device
+      # - OLLAMA_LDFLAGS=-lrocm_device
 
       - OLLAMA_CPPFLAGS=-DCUDA_ARCH_BIN=70 -DCUDA_ARCH_PTX=70 -DHLSL_TARGET=sm70     # Set compiler flags (Cuda architecture, PTX, and HLSL target)
       - OLLAMA_LDFLAGS=-lrocm_device   # Link against the rocm_device library
