--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
   # Service for running the LLaMA model
   api:
     container_name: chatApi  # Name of the container for easy management
-    image: ollama/ollama:latest  # Use the latest version of the Ollama image
+    image: ollama/ollama:rocm  # Use the latest version of the Ollama image
     restart: always  # Restart the container automatically if it crashes
-    shm_size: 2gb  # Allocate 2GB of shared memory for the container
+    shm_size: 4gb  # Allocate 2GB of shared memory for the container
     mem_limit: 16gb  # Limit the container's memory usage to 20GB
     cpus: '10'  # Allocate 12 CPU cores to the container (adjust based on actual available cores)
 
@@ -27,7 +27,8 @@ services:
       - OLLAMA_HOST=0.0.0.0:11434  # Bind the API to all network interfaces on port 11434
       - GPU=all  # Use all available GPUs (ensure compatibility with your GPU setup)
       - DEVICE_DRIVER=ryzen  # Specify device driver (for integrated AMD graphics; adjust if using a different GPU setup)
-      - OLLAMA_CPPFLAGS=-DCUDA_ARCH_BIN=70 -DCUDA_ARCH_PTX=70 -DHLSL_TARGET=sm70  # Set compiler flags (adjust based on your model requirements)
+      - OLLAMA_CPPFLAGS=-DCUDA_ARCH_BIN=70 -DCUDA_ARCH_PTX=70 -DHLSL_TARGET=sm70     # Set compiler flags (Cuda architecture, PTX, and HLSL target)
+      - OLLAMA_LDFLAGS=-lrocm_device   # Link against the rocm_device library
 
     # Define a health check to ensure the service is running correctly
     healthcheck:
@@ -41,8 +42,8 @@ services:
 
     # Mount host directories to the container for persistent storage
     volumes:
-      - ./.ollama:/root/.ollama  # Map local directory to container directory for persistent data
-      - ollama:/root/.ollama  # Use named volume for additional persistent storage
+      # - ./.ollama:/root/.ollama  # Map local directory to container directory for persistent data
+      - ollama:/root/.ollama:z  # Use named volume for additional persistent storage
 
     networks:
       - llama_net  # Connect the container to the custom network
