fix: temp memory to mantain chat context.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'  # Specify the version of Docker Compose file format
+# version: '3.8'  # Specify the version of Docker Compose file format
 
 # Define volumes for persistent data
 volumes:
@@ -15,11 +15,12 @@ services:
   # Service for running the LLaMA model
   api:
     container_name: chatApi  # Name of the container for easy management
+    # image: ollama/ollama:rocm  # Use the latest version of the Ollama image
     image: ollama/ollama:rocm  # Use the latest version of the Ollama image
     restart: always  # Restart the container automatically if it crashes
     shm_size: 4gb  # Allocate 2GB of shared memory for the container
-    mem_limit: 16gb  # Limit the container's memory usage to 20GB
-    cpus: '10'  # Allocate 12 CPU cores to the container (adjust based on actual available cores)
+    mem_limit: 10gb  # Limit the container's memory usage to 20GB
+    cpus: '8'  # Allocate 12 CPU cores to the container (adjust based on actual available cores)
 
     # Define environment variables for the container
     environment:
