fix: add new toggle button and as per new code stream on/off

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^19.1.0",
     "react-fontawesome": "^1.7.1",
     "react-markdown": "^9.1.0",
+    "rehype-highlight": "^7.0.2",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1"
   },
