fix: ignore lock files.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,72 +1,93 @@
-# version: '3.8'  # Specify the version of Docker Compose file format
+# version: '3.8'
 
 services:
-  # Service for running the LLaMA model
-  api:
-    container_name: chatApi  # Name of the container for easy management
-    # image: ollama/ollama:latest # Use the latest version of the Ollama image
-    image: ollama/ollama:rocm  # Use the latest version of the Ollama image
-    restart: always  # Restart the container automatically if it crashes
-    shm_size: 8gb  # Allocate 2GB of shared memory for the container
-    mem_limit: 16gb  # Limit the container's memory usage to 20GB
-    cpus: '12'  # Allocate 12 CPU cores to the container (adjust based on actual available cores)
 
-    # Define environment variables for the container
-    environment:
-      - OLLAMA_ORIGINS=*  # Allow requests from all origins (adjust for security as needed)
-      - OLLAMA_HOST=0.0.0.0:11434  # Bind the API to all network interfaces on port 11434
-      - GPU=all  # Use all available GPUs (ensure compatibility with your GPU setup)
-      - DEVICE_DRIVER=ryzen  # Specify device driver (for integrated AMD graphics; adjust if using a different GPU setup)
-      - OLLAMA_CPPFLAGS=-DCUDA_ARCH_BIN=70 -DCUDA_ARCH_PTX=70 -DHLSL_TARGET=sm70     # Set compiler flags (Cuda architecture, PTX, and HLSL target)
-      - OLLAMA_LDFLAGS=-lrocm_device   # Link against the rocm_device library
-
-    # Define a health check to ensure the service is running correctly
-    healthcheck:
-      test: ["CMD", "curl", "-s", "-f", "http://localhost:11434/"]  # Check if the service is responding on port 11434
-      interval: 15s  # Check every 15 seconds
-      timeout: 5s  # Wait up to 5 seconds for a response
-      retries: 3  # Retry up to 3 times before considering the service unhealthy
-
+  mongo:
+    container_name: mongo
+    image: mongo:7
+    restart: always
     ports:
-      - "11434:11434"  # Map port 11434 on the host to port 11434 in the container
-
-    # Mount host directories to the container for persistent storage
+      - "27017:27017"
     volumes:
-      - ./.ollama:/root/.ollama:z  # Map local directory to container directory for persistent data
-      - ollama:/root/.ollama:z  # Use named volume for additional persistent storage
-
+      - ./dump:/dump
+      - mongo_data:/data/db
     networks:
-      - llama_net  # Connect the container to the custom network
+      - llama_net
 
-  # Service for the frontend application
-  app:
-    container_name: chatApp  # Name of the container for easy management
-    restart: always  # Restart the container automatically if it crashes
+  backend:
+    container_name: backend
     build:
-      context: ./  # Build the image using the Dockerfile in the current directory
-  dockerfile: Dockerfile  # Specify the Dockerfile to use
-
-    # Define a health check to ensure the service is running correctly
-    healthcheck:
-      test: ["CMD", "curl", "-s", "-f", "http://localhost:8080"]  # Check if the service is responding on port 8080
-      interval: 15s  # Check every 15 seconds
-      timeout: 5s  # Wait up to 5 seconds for a response
-      retries: 3  # Retry up to 3 times before considering the service unhealthy
-
+      context: ./backend
+      dockerfile: Dockerfile
+    restart: always
+    depends_on:
+      - mongo
     ports:
-      - "8000:80"  # Map port 80 in the container to port 8080 on the host
-
+      - "3000:3000"
     networks:
-      - llama_net  # Connect the container to the custom network
+      - llama_net
+    environment:
+      - NODE_ENV=production
 
+  frontend:
+    container_name: frontend
+    build:
+      context: ./frontend
+    volumes:
+      - frontend_build:/app/dist
+    networks:
+      - llama_net
 
-# Define volumes for persistent data
+  ollama:
+    container_name: ollama
+    image: ollama/ollama:rocm
+    restart: always
+    ports:
+      - "11434:11434"
+    shm_size: 10gb
+    mem_limit: 20gb
+    cpus: '12'
+    environment:
+      - OLLAMA_ORIGINS=*
+      - OLLAMA_HOST=0.0.0.0:11434
+      - GPU=all
+      - DEVICE_DRIVER=ryzen
+      - OLLAMA_CPPFLAGS=-DCUDA_ARCH_BIN=70 -DCUDA_ARCH_PTX=70 -DHLSL_TARGET=sm70
+      - OLLAMA_LDFLAGS=-lrocm_device
+    volumes:
+      - ./models:/root/.ollama
+    networks:
+      - llama_net
+
+  stt:
+    container_name: voskSTT
+    image: alphacep/kaldi-en
+    restart: always
+    expose:
+      - "2700"
+    networks:
+      - llama_net
+
+  nginx:
+    image: nginx:stable
+    container_name: nginx
+    restart: always
+    ports:
+      - "8000:80"
+    volumes:
+      - frontend_build:/usr/share/nginx/html:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - frontend
+      - backend
+      - ollama
+      - stt
+    networks:
+      - llama_net
+
 volumes:
-  ollama:  # Named volume to persist model data
+  mongo_data:
+  frontend_build:
 
-# Define networks for container communication
 networks:
   llama_net:
-    # Optional: Uncomment and configure if you need an external network configuration
-    # driver: bridge
-    # external: true
