--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,20 +29,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "axios": "latest",
-    "bootstrap": "latest",
-    "dayjs": "^1.11.11",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.5",
+    "dayjs": "^1.11.13",
     "font-awesome": "^4.7.0",
-    "react": "latest",
-    "react-dom": "latest",
+    "lodash": "^4.17.21",
+    "marked": "^15.0.8",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-fontawesome": "^1.7.1",
-    "react-markdown": "latest",
-    "remark-gfm": "latest"
+    "react-markdown": "^9.1.0",
+    "react-router-dom": "^7.5.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "latest",
@@ -52,6 +57,7 @@
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
     "eslint-plugin-react-refresh": "latest",
+    "terser": "^5.39.0",
     "vite": "latest"
   }
 }
