--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "bootstrap": "^5.3.5",
     "dayjs": "^1.11.13",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.21",
     "marked": "^15.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-fontawesome": "^1.7.1",
     "react-markdown": "^9.1.0",
+    "react-router-dom": "^7.5.0",
     "rehype-highlight": "^7.0.2",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1"
