update backend and frontend login feature and improve stt and tts. also improve predefine template's for ollama model to easy to communicate. improve ui/ux and accessibility tag's and better for vi users.

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,14 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "latest",
-    "@fastify/jwt": "latest",
+    "@fastify/jwt": "^9.1.0",
     "@types/mongoose": "latest",
     "bcrypt": "latest",
     "dotenv": "latest",
     "fastify": "latest",
+    "fastify-cookie": "^5.6.1",
     "mongoose": "latest"
   },
   "devDependencies": {
