--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,7 +44,7 @@ http {
     }
 
     location /stt/ {
-      proxy_pass http://voskSTT:2700/;
+      proxy_pass http://stt:2700/;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
