--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 # version: '3.8'
 
 services:
-
   mongo:
     container_name: mongo
-    image: mongo:7
+    image: mongo:latest
     restart: always
     ports:
       - "27017:27017"
@@ -15,7 +14,7 @@ services:
       - llama_net
 
   backend:
-    container_name: backend
+    container_name: pro_chat_backend
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -51,7 +50,7 @@ services:
       - llama_net
 
   stt:
-    container_name: voskSTT
+    container_name: pro_chat_stt
     image: alphacep/kaldi-en
     restart: always
     ports:
@@ -62,18 +61,18 @@ services:
       - llama_net
 
   nginx:
-    image: nginx:stable
     container_name: nginx
+    image: nginx:latest
     restart: always
     ports:
       - "8000:80"
     volumes:
       - ./frontend/dist:/usr/share/nginx/html:ro
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - backend
-      - ollama
-      - stt
+    # depends_on:
+      # - backend
+      # - ollama
+      # - stt
     networks:
       - llama_net
 
