feat: enhance project structure and documentation
- Updated package.json to include release scripts and ESLint as a dev dependency.
- Added DEVELOPER_GUIDE.md, TESTER_GUIDE.md, and USER_GUIDE.md for comprehensive project documentation.
- Created backend ESLint configuration for TypeScript.
- Introduced docker-compose-mcp.yml for managing MCP services.
- Configured mcp-config.yaml for service URLs.
- Developed Dockerfile and package.json for mcp-mongo service.
- Implemented index.js for MCP Mongo server with JSON-RPC functionality.
- Added User model and userTools for user management in MongoDB.

--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,10 @@
   "devDependencies": {
     "@types/bcrypt": "latest",
     "@types/node": "^24.0.14",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
     "nodemon": "^3.1.10",
+    "standard-version": "^9.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
