--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,6 +10,7 @@ http {
     listen 80;
     server_name localhost;
 
+    # Serve frontend
     location / {
       root /usr/share/nginx/html;
       index index.html;
@@ -21,8 +22,9 @@ http {
         add_header Cache-Control "public";
         try_files $uri $uri/ /index.html;
       }
-    }
+    } # end root block
 
+    # Proxy API requests → backend service
     location /api/ {
       proxy_pass http://backend:3000/;
       proxy_http_version 1.1;
@@ -31,8 +33,9 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       rewrite ^/api(/.*)$ $1 break;
-    }
+    } # end API block
 
+    # Proxy Ollama requests → ollama service
     location /ollama/ {
       proxy_pass http://ollama:11434/;
       proxy_http_version 1.1;
@@ -41,19 +44,21 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       rewrite ^/ollama(/.*)$ $1 break;
-    }
+    } # end Ollama block
 
-    location /stt/ {
-      proxy_pass http://stt:2700/;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    # Optional STT service (commented)
+    # location /stt/ {
+    #   proxy_pass http://stt:2700/;
+    #   proxy_http_version 1.1;
+    #   proxy_set_header Upgrade $http_upgrade;
+    #   proxy_set_header Connection "upgrade";
+    #   proxy_set_header Host $host;
+    #   proxy_set_header X-Real-IP $remote_addr;
+    #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #   proxy_set_header X-Forwarded-Proto $scheme;
+    # }
 
+    # Deny hidden files
     location ~ /\. {
       deny all;
     }
