--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
@@ -24,6 +25,8 @@
     "@types/node": "^24.0.14",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
+    "husky": "^8.0.0",
+    "lint-staged": "^16.2.0",
     "nodemon": "^3.1.10",
     "standard-version": "^9.5.0",
     "ts-node": "^10.9.2",
