--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,8 +1,8 @@
 version: '3.8'
 
 services:
-  mongo:
-    container_name: mongo
+  pro_chat_mongo:
+    container_name: pro_chat_mongo
     image: mongo:latest
     restart: always
     ports:
@@ -31,26 +31,28 @@ services:
       - OLLAMA_CPPFLAGS=-DCUDA_ARCH_BIN=70 -DCUDA_ARCH_PTX=70 -DHLSL_TARGET=sm70
       - OLLAMA_LDFLAGS=-lrocm_device
     volumes:
-      - ./models:/root/.ollama
+      #- ./models:/root/.ollama #old models
+      - ./chat_models:/root/.ollama
     networks:
       - llamanet
 
-  backend:
-    container_name: backend
+  pro_chat_backend:
+    container_name: pro_chat_backend
     build:
       context: ./backend
       dockerfile: Dockerfile-dev
     restart: always
     depends_on:
-      - mongo
+      - pro_chat_mongo
       - ollama
     ports:
-      - "3000:3000"
+      - "3300:3000"
     networks:
       - llamanet
     environment:
       NODE_ENV: development
-      MONGO_URL: mongodb://mongo:27017/chatApp
+      MONGO_URL: mongodb://pro_chat_mongo:27017/chatApp
+      # MONGO_URL: mongodb://localhost:27018/chatApp
       OLLAMA_HOST: http://ollama:11434
     volumes:
       - ./backend:/app
